# Quake-Id-Tech-2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
shaders/basic/: basic.frag  basic.vert
shaders/bitmapFont/: bitmapFont.frag  bitmapFont.vert
shaders/blurHorizontal/: blurHorizontal.frag  blurHorizontal.vert
shaders/bsp/: bsp.frag  bsp.vert
src/: g_main.cpp  g_main.hpp
src/core/: engine.cpp  engine.hpp  window.hpp  windowEvent.hpp
src/core/application/: app.cpp  app.hpp
src/core/logging/: glCallWrapper.h  logger.hpp
src/debug/: debugRenderer.cpp  debugRenderer.hpp
src/device/gpu/: colorTypes.hpp  gpu.cpp  gpu.hpp  gpuDefs.hpp  indexType.hpp  opengl.hpp
src/device/gpu/buffers/: frameBuffer.cpp  frameBuffer.hpp  gpuBuffer.cpp  gpuBuffer.hpp  gpuBufferManager.cpp  gpuBufferManager.hpp  indexBuffer.hpp  (+1 more)
src/device/monitor/: monitor.hpp
src/gui/: guiButton.cpp  guiButton.hpp  guiCanvas.cpp  guiCanvas.hpp  guiImage.cpp  guiImage.hpp  guiLabel.cpp  guiLabel.hpp  guiLayout.cpp  guiLayout.hpp  guiNode.cpp  guiNode.hpp  guiScroll.cpp  guiScroll.hpp  guiSize.hpp  guiStack.hpp
src/input/: inputDevice.cpp  inputDevice.hpp  inputEvent.cpp  inputEvent.hpp  inputEventFlags.hpp  inputEventType.cpp  inputEventType.hpp
src/input/keyboard/: keyboard.cpp  keyboard.hpp
src/logic/structures/: octtree.hpp
src/models/: pose.hpp
src/physics/: collision.hpp  physicsSimulation.cpp  physicsSimulation.hpp
src/physics/components/: rigidBodyComponent.cpp  rigidBodyComponent.hpp  rigid_body_component.cpp
src/platform/: platform.hpp  platformImpl.cpp  platformImpl.hpp
src/platform/game/: game.hpp
src/platform/state/: state.cpp  state.hpp  stateSystem.cpp  stateSystem.hpp
src/rendering/gpu/: colorTypes.hpp  frame_buffer.cpp  frame_buffer.hpp  gpu.cpp  gpu.hpp  gpu_buffer.cpp  gpu_buffer.hpp  gpu_buffer_mgr.cpp  gpu_buffer_mgr.hpp  gpu_defs.hpp  gpu_program.cpp  gpu_program.hpp  gpu_program_mgr.cpp  gpu_program_mgr.hpp  indexType.hpp  index_buffer.hpp  opengl.hpp  vertex_buffer.hpp
src/rendering/query/: traceResult.hpp
src/rendering/view/: cameraParams.hpp  frustum.hpp
src/resources/: image.cpp  image.hpp  resource.cpp  resource.hpp  resourceManager.cpp  resourceManager.hpp  texture.cpp  texture.hpp
src/resources/io/: fileReader.hpp  io.hpp
src/scene/: scene.cpp  scene.hpp
src/scene/structure/: aabb.hpp  arithmeticConcept.hpp  circle.hpp  line.hpp  padding.hpp  plane.hpp  range.hpp  rectangle.hpp  sphere.hpp
src/store/: cache.cpp  cache.hpp
src/testGame/: g_main.cpp  g_main.hpp
src/utils/: FNV.hpp  enum.hpp  hash.hpp
(+36 files in other folders)
